--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <body>
         <h1>
-            Welcome to a web page which is hosted on GitHub code hosting provide
+            Welcome to a web page which is hosted on GitHub
         </h1>
+        <p>GitHub repositories allows us to host a web page from GitHub Pages</p>
     </body>
 </Doctype>
