--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
             Welcome to a web page which is hosted on GitHub
         </h1>
         <p>GitHub repositories allows us to host a web page from GitHub Pages</p>
+        <p>By Default, Vercel for GitHub starts deployment for every push on the main repository</p>
     </body>
 </Doctype>
