--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         </h1>
         <p>GitHub repositories allows us to host a web page from GitHub Pages</p>
         <p>By Default, Vercel for GitHub starts deployment for every push on the main repository</p>
+        <h1>It seems that is it correct</h1>
     </body>
 </Doctype>
